--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
             </section><br>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://cloudstack12.github.io/Seattle-Commercial-Painters/">https://cloudstack12.github.io/Seattle-Commercial-Painters/</a><br>
+                <a target="_bLank" href="https://guileless-scone-6c2252.netlify.app/">https://guileless-scone-6c2252.netlify.app/</a><br>
+                <a target="_bLank" href="https://outsourcesharks.s3.us-east-005.backblazeb2.com/Seattle-Commercial-Painters/index.html">https://outsourcesharks.s3.us-east-005.backblazeb2.com/Seattle-Commercial-Painters/index.html</a><br>
+                <a target="_bLank" href="https://cloudstackos.s3.ap-northeast-1.amazonaws.com/Seattle-Commercial-Painters/index.html">https://cloudstackos.s3.ap-northeast-1.amazonaws.com/Seattle-Commercial-Painters/index.html</a><br>
             </section>
 
         </div>
